<resources>
    <string name="app_name">GamificationNote</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dashboard_label">Панель управления</string>
    <string name="guild_label">Гильдия</string>
    <string name="guild_feature_description">Ищите, вступайте в гильдии или создайте свою. В гильдиях вы сможете найти друзей и единомышленников, а также побеждать боссов вместе со своими друзьями, выполняя свои ежедневные задачи.</string>
    <string name="achievements_feature_label">Достижения</string>
    <string name="main_features_label">Основные разделы</string>
    <string name="icon_text_cd">Далее</string>
    <string name="tab_simple_tasks">Обычные</string>
    <string name="tab_repeating_tasks">Повторяющиеся</string>
    <string name="tab_composite_tasks">Составные</string>
    <string name="tab_completed_tasks">Выполненные</string>
    <string name="tab_folders">Папки</string>
    <string name="select_tasks_type_label">Выберите тип задач:</string>
    <string name="completed_tasks_label">Выполненные задачи</string>
    <string name="how_completed_tasks_work">Выполненные задачи после их завершения помещаются в этот список, а затем удаляются через 15 дней по-умолчанию (вы можете изменить время в настройках). Или вы можете очистить их вручную</string>
    <string name="clear_label">Очистить</string>
    <string name="create_new_folder_label">Создание папки</string>
    <string name="enter_folder_name_hint">Введите название папки…</string>
    <string name="enter_folder_description_hint">Введите описание папки…</string>
    <string name="select_folder_icon_label">Выберите иконку для папки:</string>
    <string name="enter_task_name_hint">Введите название задачи…</string>
    <string name="enter_task_description_hint">Введите описание задачи…</string>
    <string name="common_task">Обычная задача</string>
    <string name="rare_task">Редкая задача</string>
    <string name="epic_task">Эпическая задача</string>
    <string name="legendary_task">Легендарная задача</string>
    <string name="select_difficult_label">Выберите сложность:</string>
    <string name="select_task_icon_label">Выберите иконку для задачи:</string>
    <string name="enter_sub_task_name_hint">Введите подзадачу…</string>
    <string name="next_label">Далее</string>
    <string name="every_day_creation_label">Каждый день</string>
    <string name="every_month_creation_label">Каждый месяц</string>
    <string name="every_year_creation_label">Каждый год</string>
    <string name="select_periodicity_auto_creation_of_task_label">Выберите периодичность автосоздания задачи</string>
    <string name="select_time_and_date_manually_auto_creation_of_task_label">Или выберите время и дату вручную</string>
    <string name="select_date_and_time_label">Выбрать дату и время</string>
    <string name="shop_label">Магазин</string>
    <string name="hero_shop_label">Кастомизация героя</string>
    <string name="hero_customization_description">Здесь вы сможете купить новые вещи герою, дабы изменить ему внешний вид и вкачать атрибуты. Тут можно купить оружие, броню и фон для героя.</string>
    <string name="select_purchase_category_label">Выберите категорию покупки</string>
    <string name="weapon_shop_label">Магазин оружия</string>
    <string name="armor_shop_label">Магазин брони</string>
    <string name="background_shop_label">Магазин заднего фона</string>
    <string name="feature_shop_label">Магазин функционала</string>
    <string name="music_shop_label">Магазин музыки</string>
    <string name="theme_shop_label">Магазин тем</string>
    <string name="effect_shop_label">Магазин эффектов</string>
    <string name="detail_view_label">Детальный просмотр</string>
    <string name="item_name_label">Название:</string>
    <string name="item_description_label">Описание:</string>
    <string name="item_rarity_label">Редкость:</string>
    <string name="item_attributes_label">Атрибуты</string>
    <string name="item_money_price_label">Цена в монетах:</string>
    <string name="item_cristall_price_label">Цена в кристаллахЖ</string>
    <string name="buy_label">Купить</string>
    <string name="item_preview_label">Превью декорации:</string>
    <string name="item_player_label">Прослушивание музыки:</string>
    <string name="icon_back_cd">Кнопка назад</string>
    <string name="icon_next_cd">Кнопка Далее</string>
    <string name="icon_save_cd">Кнопка Сохранить</string>
    <string name="select_icon_cd">Кнопка выбора иконки</string>
    <string name="icon_play_music">Кнопка воспроизвести музыку</string>
    <string name="icon_add_simple_task_cd">Кнопка добавить обычную задачу</string>
    <string name="icon_add_repeating_task_cd">Кнопка добавить повторяющуюся задачу</string>
    <string name="image_hero_item_cd">Изображение игрового предмета</string>
    <string name="icon_preview_feature_cd">Изображение предпросмотра функционала</string>
    <string name="icon_add_folder_cd">Кнопка добавить папку</string>
    <string name="icon_add_composite_task_cd">Кнопка добавить составную задачу</string>
    <string name="icon_add_in_folder_task_cd">Кнопка добавить задачу в папку</string>
    <string name="icon_settings_cd">Кнопка настройки</string>
    <string name="icon_delete_sub_task_cd">Кнопка удаления подзадачи</string>
    <string name="icon_folder_cd">Иконка папки</string>
    <string name="icon_add_sub_task_cd">Кнопка добавить подзадачу</string>
    <string name="icon_submit_manually_select_date_cd">Кнопка подтвердить выбор даты вручную</string>
    <string name="task_database_name">tasks_db</string>
    <string name="shop_database_name">shop_db</string>
</resources>