<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/closeIconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin"
        android:background="@drawable/shape_rounded_16"
        android:backgroundTint="?screenCardBackground"
        android:padding="@dimen/common_padding"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?screenImageTint"
        android:contentDescription="@string/icon_back_cd" />

    <ImageView
        android:id="@+id/nextIconImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_margin"
        android:background="@drawable/shape_rounded_16"
        android:backgroundTint="?screenCardBackground"
        android:padding="@dimen/common_padding"
        android:src="@drawable/ic_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="?screenImageTint"
        android:contentDescription="@string/icon_next_cd" />

    <TextView
        android:id="@+id/creationTaskLabel"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/small_margin"
        android:background="@drawable/shape_rounded_16"
        android:backgroundTint="?screenCardBackground"
        android:ellipsize="end"
        android:fontFamily="@font/ubuntu_regular"
        android:maxLines="1"
        android:padding="@dimen/common_padding"
        android:text="@string/create_new_folder_label"
        android:textColor="?screenOnCardTextColor"
        android:textSize="@dimen/small_text_size"
        app:layout_constraintBottom_toBottomOf="@id/closeIconImageView"
        app:layout_constraintEnd_toStartOf="@id/nextIconImageView"
        app:layout_constraintStart_toEndOf="@id/closeIconImageView"
        app:layout_constraintTop_toTopOf="@id/closeIconImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>