<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:id="@+id/guildCardLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/shape_rounded_16"
    android:backgroundTint="?screenCardBackground"
    android:orientation="vertical"
    android:layout_marginVertical="8dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/iconNextFrameLayout"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/feature_title_text_view"
            android:layout_width="match_parent"
            android:maxLines="2"
            android:ellipsize="end"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ubuntu_bold"
            android:text="@string/guild_label"
            android:textColor="?screenOnCardTextColor"
            android:textSize="22sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iconNextFrameLayout"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/feature_description_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxLines="7"
            android:ellipsize="end"
            android:fontFamily="@font/ubuntu_medium"
            android:text="@string/guild_feature_description"
            android:textColor="?screenOnCardTextColor"
            app:layout_constraintTop_toBottomOf="@id/feature_title_text_view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iconNextFrameLayout"
            android:textSize="18sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <FrameLayout
        android:id="@+id/iconNextFrameLayout"
        android:layout_width="60dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/shape_right_rounded_16"
        android:backgroundTint="?screenAccentColor"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        android:focusable="true">

        <ImageView
            android:id="@+id/selectThisTypeImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:contentDescription="@string/icon_text_cd"
            android:src="@drawable/ic_next"
            app:tint="?screenImageTint" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>